# RedSDK

./: .gitignore  CMakeLists.txt  README.md
include/: keydefinition.h  rcp_parameter_types_public.h  rcp_utils.h
include/decorated_string/: decorated_string.h
include/rcp_parser/: rcp_parser2.h
include/red/: R3DSDK.h  R3DSDKCuda.h  R3DSDKDecoder.h  R3DSDKDefinitions.h  R3DSDKMetadata.h  R3DSDKMetal.h  R3DSDKOpenCL.h  R3DSDKRocket.h  R3DSDKStream.h  base64.h  c_list.h  clist.h  rcp_api.h  rcp_types_public.h  rcp_utils.h
include/stringl/: stringl.h
lib/: R3DSDK-2012MD.lib  R3DSDK-2012MDd.lib  R3DSDK-2012MT.lib  R3DSDK-2012MTd.lib  R3DSDK-2013MD.lib  R3DSDK-2013MDd.lib  R3DSDK-2013MT.lib  R3DSDK-2013MTd.lib  R3DSDK-2015MD.lib  R3DSDK-2015MDd.lib  R3DSDK-2015MT.lib  R3DSDK-2015MTd.lib  R3DSDK-2017MD.lib  R3DSDK-2017MDd.lib  R3DSDK-2017MT.lib  R3DSDK-2017MTd.lib
src/: base64.c  c_list.c  clist.cpp  decorated_string.c  rcp_api.c  rcp_parser2.c  rcp_utils.cpp  strlcat.c  strlcpy.c
